<resources>
    <string name="app_name">WeatherClient</string>

    <string name="main_dialog_warning_title">Внимание</string>
    <string name="main_question_delete_city">Вы действительно хотите удалить город - %s ?</string>
    <string name="main_city_empty_list_not">Для просмотра погоды необходимо добавить город</string>

    <string name="add_city_dialog_message_empty">Необходимо ввести город!</string>
    <string name="add_city_dialog_message_found">Введенный город не найден!</string>
    <string name="add_city_dialog_message_exists">Введенный город уже есть в списке!</string>
    <string name="add_city_dialog_message_empty_list">Должен быть добавлен хотя бы один город!</string>
    <string name="add_city_dialog_message_save">Не удалось сохранить некоторые города. Попробуйте повторить операцию позднее</string>
    <string name="add_city_question_not_save">Есть несохраненные города. Вы действительно хотите продолжить?</string>

    <string name="add_city_button_complete">Готово</string>
    <string name="add_city_current_city_name">Текущее местоположение: </string>
    <string name="add_city_current_found">Определяется&#8230;</string>
    <string name="add_city_current_enable">Включите определение местоположения</string>
    <string name="add_city_input_name">Введите название города:</string>
    <string name="add_city_input_hint_lat">(латинскими буквами)</string>
    <string name="add_city_button">Добавить</string>
    <string name="add_city_preview">Предварительный просмотр:</string>

    <string name="weather_item_name">Температура - %.0f °C</string>
    <string name="weather_item_direction">Направление ветра - %s</string>
    <string name="weather_item_speed">Скорость ветра - %.0f м/с</string>
    <string name="weather_direction_angle_0_45">северный</string>
    <string name="weather_direction_angle_45_60">северо-восточный</string>
    <string name="weather_direction_angle_90_135">восточный</string>
    <string name="weather_direction_angle_135_180">юго-восточный</string>
    <string name="weather_direction_angle_180_225">южный</string>
    <string name="weather_direction_angle_225_270">юго-западный</string>
    <string name="weather_direction_angle_270_315">западный</string>
    <string name="weather_direction_angle_315">северо-западный</string>
</resources>
